# fqpack-next

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  activate.bat  build_all.bat  build_rear.bat  build_web.bat  compact_mongodb.ps1  create_venv.bat  demo.md  deploy.bat  deploy_rear.bat  deploy_web.bat  freeze.txt  futureSymbol.json  install.bat  install.py  jupyter_server_config.json  package.py  pyproject.toml  test_enum_serialization.py  upgrade_subprj.py  version.py
.codex/: hooks.json
.codex/memory/: clx-preholdout-handoff.md  data-truth-sources.md  deploy-surfaces.md  pitfalls.md  product-surfaces.md  repo-guardrails.md  runtime-surfaces.md  system-topology.md  workflow-rules.md
.devin/: hooks.v1.json
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: symphony_task.yml
.github/workflows/: ci.yml  deploy-production.yml  docker-images.yml
.governance/: board.html  events.jsonl  project.json  work.json
codex_run/: start_codex_app_server.bat  start_codex_cli.bat  start_freshquant_codex.ps1
deployment/examples/: envs.fqnext.example  freshquant.yaml  freshquant_bootstrap.yaml  supervisord.fqnext.example.conf
docker/: Dockerfile.rear  Dockerfile.web  compose.parallel.yaml
docker/tradingagents/: .env.example  frontend.nginx.conf
docs/: Docker常用命令.md  Docker常用说明.md  JupyterLab配置.md  MongoDB开启副本集模式.md  Win10基本信息修改.md  index.md  pip使用国内镜像.md  优秀开源量化项目.md  多时间级别交易信号仓位管理设计文档.md  实盘对接说明.md  开发工具安装指南.md
docs/agent/: Docker并行部署指南.md  ETF行情数据获取指南.md  Symphony宿主机服务部署说明.md  Symphony本地安装与使用指南.md  Symphony正式接入治理说明.md  Symphony真实Issue阻塞复盘与优化建议.md  TradingAgents-CN接入与运行说明.md  TradingAgents-CN股票分析流程调研.md  index.md  信号函数-CLXS系列.md  旧仓库freshquant-重点迁移模块调研.md  股票池与持仓数据获取指南.md  行情数据获取指南.md  配置管理指南.md  项目目标与代码现状调研.md
docs/current/: architecture.md  configuration.md  deployment.md  interfaces.md  overview.md  runtime.md  storage.md  troubleshooting.md
docs/migration/: README.md  breaking-changes.md  progress.md
docs/plans/: 2026-03-05-etf-qfq-adj-design.md  2026-03-05-etf-qfq-adj-implementation-plan.md  2026-03-05-xtdata-producer-consumer-fullcalc-implementation-plan.md  2026-03-06-gantt-postclose-readmodel-design.md  2026-03-06-gantt-postclose-readmodel-implementation-plan.md  2026-03-06-kline-slim-mvp-design.md  2026-03-06-kline-slim-mvp-implementation-plan.md  2026-03-06-project-local-uv-python-312-design.md  2026-03-06-project-local-uv-python-312-implementation-plan.md  2026-03-06-stock-etf-order-management-implementation-plan.md  2026-03-07-docs-current-state-refresh.md  2026-03-07-gantt-page-migration-design.md  2026-03-07-gantt-page-migration-implementation-plan.md  2026-03-07-gantt-postclose-incremental-backfill-design.md  2026-03-07-gantt-postclose-incremental-backfill-implementation-plan.md  2026-03-07-gantt-shouban30-phase1-design.md  2026-03-07-gantt-shouban30-phase1-implementation-plan.md  2026-03-07-guardian-holding-codes-refresh-design.md  2026-03-07-guardian-holding-codes-refresh-implementation-plan.md  2026-03-07-host-runtime-docker-mongo-design.md  2026-03-07-host-runtime-docker-mongo-implementation-plan.md  2026-03-07-kline-slim-chanlun-structure-design.md  (+198 more)
docs/rfcs/: 0000-template.md  (+38 more)
freshquant/: Calc.py  ComposeKline.py  DingMsg.py  Duan.py  KlineDataTool.py  ToString.py  Tools.py  __init__.py  __main__.py  bootstrap_config.py  chanlun_service.py  chanlun_structure_service.py  cli.py  config.py  constant.py  db.py  divergence.py  freshquant.yaml  freshquant_future.yaml  initialize.py  placeholder.py  pre_pool_service.py  runtime_constants.py  scheduler.py  series_tool.py  shouban30_pool_service.py  stock_service.py  system_config_service.py  system_settings.py
morningglory/fqchan05/: .gitignore  CMakeLists.txt  README.md
morningglory/fqchan05/cpp/: Chan.cpp  Chan.h  Log.cpp  Log.h  PluginTCalcFunc.h  TCalcFuncSets.cpp  TCalcFuncSets.h
morningglory/fqchan05/tdx/: clx05.txt
morningglory/fqdagster/: pyproject.toml
morningglory/fqdagster/src/fqdagster/defs/: postclose_markers.py
morningglory/fqdagster/src/fqdagster/defs/assets/: __init__.py  cjsd.py  daily_screening.py  eastmoney.py  iwencai.py  market_data.py  market_data_freshness.py  postclose_ready.py  tdx.py  trade_calendar.py
morningglory/fqdagster/src/fqdagster/defs/jobs/: clean.py  daily_screening.py  gantt.py  trade.py
morningglory/fqdagster/src/fqdagster/defs/ops/: __init__.py  clean.py  daily_screening.py  gantt.py  trade.py
morningglory/fqdagster/src/fqdagster/defs/schedules/: __init__.py  clean.py  daily_screening.py  gantt.py  lvchan.py  market_data.py  trade.py  trade_calendar.py
morningglory/fqdagster/src/fqdagster/defs/sensors/: __init__.py  postclose.py
morningglory/fqxtrade/: .gitignore  README.md  pyproject.toml
morningglory/fqxtrade/fqxtrade/: __init__.py  __main__.py  cli.py  config.py
morningglory/fqxtrade/fqxtrade/database/: cache.py  mongodb.py  redis.py
morningglory/fqxtrade/fqxtrade/util/: trade_date_hist.py
morningglory/fqxtrade/fqxtrade/xtquant/: account.py  broker.py  cli_commands.py  connection_manager.py  fqtype.py  handlers.py  lock.py  puppet.py  query_data_handler.py  status_handler.py  trading_manager.py
morningglory/fqxtrade/tests/: test_puppet_buy_credit_finance.py
script/: build_extensions.py  check_freshquant_runtime_post_deploy.ps1  docker_parallel_compose.ps1  docker_parallel_compose.py  docker_parallel_runtime.py  docker_parallel_up.ps1  fq_apply_deploy_plan.ps1  fq_local_preflight.ps1  fq_open_pr.ps1  fqnext_host_runtime.py  fqnext_host_runtime_ctl.ps1  fqnext_supervisor_config.py  freshquant_deploy_plan.py  freshquant_frontend_release_probe.py  freshquant_health_check.ps1  freshquant_health_check.py  install_fqnext_supervisord_restart_task.ps1  install_fqnext_supervisord_service.ps1  install_repo_hooks.ps1  invoke_fqnext_supervisord_restart_task.ps1  pwsh_utf8.ps1  qfq_governance_gate.py  qmt_window.py  rebuild_runtime_ingest_progress.py  run_command.py  run_fqnext_supervisord_restart_task.ps1  start_jupyter.bat
(+3751 files in other folders)
