[project]
name = "fqdagster"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.11.16",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "fqdagster"
registry_modules = [
    "fqdagster.components.*",
]
