[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fqxtrade"
version = "2025.11.3"
description = "fqxtrade cli"
requires-python = ">=3.12,<3.13"
authors = [
    { name="kldcty@vx", email="1106628276@qq.com" }
]
dependencies = [
    "pygame",
    "psutil",
    "rich",
    "pendulum",
    "pydash",
    "dynaconf",
    "redis",
    "loguru"
]

[project.scripts]
fqxtrade = "fqxtrade.cli:main"
